// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar renders empty resource list without crashing 1`] = `
<section
  className="Sidebar is-closed"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders list of resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--pending"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <span
            className="resLink-name"
          >
            vigoda
          </span>
          <span>
            <time
              dateTime="1949-02-03T20:13:00.000Z"
              title="1,555,703,078,853"
            >
              70yr
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--pending"
          href="/r/snack"
          onClick={[Function]}
        >
          <span
            className="resLink-name"
          >
            snack
          </span>
          <span>
            <time
              dateTime="1949-02-03T20:13:00.000Z"
              title="1,555,703,078,853"
            >
              70yr
            </time>
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;
